@@ -587,6 +587,18 @@ apr_time_t md_cert_get_not_after(md_cert_t *cert)
     return time;
 }
 
+apr_time_t md_cert_get_not_before(md_cert_t *cert)
+{
+    int secs, days;
+    apr_time_t time = apr_time_now();
+    ASN1_TIME *not_after = X509_get_notBefore(cert->x509);
+    
+    if (ASN1_TIME_diff(&days, &secs, NULL, not_after)) {
+        time += apr_time_from_sec((days * MD_SECS_PER_DAY) + secs); 
+    }
+    return time;
+}
+
 int md_cert_covers_domain(md_cert_t *cert, const char *domain_name)
 {
     if (!cert->alt_names) {
